clang/test/BSC/Negative/NullabilityCheck/function_decl_nullable_mismatch.cbs
// RUN: %clang_cc1 -verify %s

// Test that declaration and definition with different nullability qualifiers
// should report conflicting types error

// Test 1: Declaration without _Nullable, definition with _Nullable
_Safe int *owned foo1(void);  // expected-note {{previous declaration is here}}

_Safe int *owned _Nullable foo1(void) {  // expected-error {{conflicting types for 'foo1'}}
  return nullptr;
}

// Test 2: Declaration with _Nullable, definition without _Nullable
_Safe int *borrow _Nullable foo2(int *borrow p);  // expected-note {{previous declaration is here}}

_Safe int *borrow foo2(int *borrow p) {  // expected-error {{conflicting types for 'foo2'}}
  return p;
}

// Test 3: Parameters with different nullability qualifiers
_Safe void foo3(int *owned p);  // expected-note {{previous declaration is here}}

_Safe void foo3(int *owned _Nullable p) {  // expected-error {{conflicting types for 'foo3'}}
}

// Test 4: Nested pointer with different nullability
_Safe int **owned foo4(void);  // expected-note {{previous declaration is here}}

_Safe int **owned _Nullable foo4(void) {  // expected-error {{conflicting types for 'foo4'}}
  return nullptr;
}

// Test 5: Both declaration and definition have same _Nullable (should pass)
_Safe int *owned _Nullable foo5(void);

_Safe int *owned _Nullable foo5(void) {
  return nullptr;
}

// Test 6: Both declaration and definition without _Nullable (should pass)
_Safe int *owned foo6(void);

_Safe int *owned foo6(void) {
  int *owned p = nullptr;
  return p;
}
